Fixed Issue 455. Fixed Issue 456.